// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serve fs output: 00 manifest.json 1`] = `
Object {
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/content-script-loader.index.ts.074b6402.e7735bc2.js",
      ],
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
    },
    Object {
      "js": Array [
        "assets/content-script-loader.index.ts.e4e256db.b0a4346a.js",
      ],
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
    },
  ],
  "manifest_version": 3,
  "name": "test extension",
  "version": "0.1.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "*",
        "**/*",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`serve fs output: 01 output files 1`] = `
Array [
  "assets/content-script-client.1b7d5e37.js",
  "assets/content-script-loader.index.ts.074b6402.e7735bc2.js",
  "assets/content-script-loader.index.ts.e4e256db.b0a4346a.js",
  "assets/index.ts.074b6402.js",
  "assets/index.ts.caa36ca4.css",
  "assets/index.ts.e4e256db.js",
  "assets/index.ts.f31ac90f.css",
  "assets/precontroller.9e1e2319.js",
  "manifest.json",
]
`;

exports[`serve fs output: assets/content-script-client.1b7d5e37.js 1`] = `
"let port;
setupPort();
setInterval(() => port?.postMessage({ type: \\"ping\\" }), 5e3);
setInterval(setupPort, 5 * 60 * 1e3);
function setupPort() {
  port?.disconnect();
  port = chrome.runtime.connect({ name: \\"@crx/client\\" });
  port.postMessage({ type: \\"connected\\", url: import.meta.url });
  port.onMessage.addListener(handlePortMessage);
}
function handlePortMessage(payload) {
  switch (payload.type) {
    case \\"connected\\":
      console.log(\\"[vite-crx] connected.\\");
      break;
    case \\"custom\\":
      if (payload.event === \\"runtime-reload\\")
        handleRuntimeReload();
      break;
    default:
      console.log(\\"[vite]\\", payload);
      break;
  }
}
function handleRuntimeReload() {
  console.log(\\"[vite-crx] runtime reload.\\");
  setTimeout(() => location.reload(), 1e3);
}
"
`;

exports[`serve fs output: assets/content-script-loader.index.ts.074b6402.e7735bc2.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content-script-client.1b7d5e37.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/index.ts.074b6402.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/content-script-loader.index.ts.e4e256db.b0a4346a.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content-script-client.1b7d5e37.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/index.ts.e4e256db.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/index.ts.074b6402.js 1`] = `
"var styles = '';

console.log(\\"content1\\");
"
`;

exports[`serve fs output: assets/index.ts.caa36ca4.css 1`] = `
"body {
  color: blue;
}
"
`;

exports[`serve fs output: assets/index.ts.e4e256db.js 1`] = `
"var styles = '';

console.log(\\"content2\\");
"
`;

exports[`serve fs output: assets/index.ts.f31ac90f.css 1`] = `
"body {
  color: red;
}
"
`;

exports[`serve fs output: assets/precontroller.9e1e2319.js 1`] = `
"setTimeout(() => location.reload(), 100);
"
`;
